--- a/WireGuardCommand/Pages/Project/ProjectView.razor.css
+++ b/WireGuardCommand/Pages/Project/ProjectView.razor.css
@@ -38,10 +38,50 @@
 
 .project-view-body {
     display: flex;
+    flex-direction: column;
+
+    padding: 1rem;
+}
+
+.project-view-tab {
+    flex: 1;
+
+    display: flex;
     flex-direction: row;
 
     gap: 0.5rem;
     flex-wrap: wrap;
 
+    background-color: rgb(40, 40, 40);
+
+    border: 1px solid rgb(64, 64, 64);
+    border-radius: 5px;
+    border-top-left-radius: 0px;
+
     padding: 1rem;
+}
+
+.tab-button {
+    color: rgb(128, 128, 128);
+    background-color: rgb(50, 50, 50);
+
+    border: 1px solid rgb(64, 64, 64);
+    border-bottom: 0px;
+
+    border-radius: 5px;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+
+    min-width: 4rem;
+    padding: 0.25rem;
+
+    transition: background-color 0.5s;
+}
+.tab-button:hover {
+    color: rgb(200, 200, 200);
+    background-color: rgb(60, 60, 60);
+}
+.tab-button.active {
+    color: white;
+    background-color: rgb(64, 64, 64);
 }
