--- a/WireGuardCommand/Pages/Index.razor
+++ b/WireGuardCommand/Pages/Index.razor
@@ -7,7 +7,7 @@
 
 <div class="container">
 
-    <Alert Type="AlertType.Error" @bind-Content="Error"/>
+    <Alert Type="AlertType.Error" Content="@Error" OnDismiss="() => { Error = string.Empty; }"/>
 
     <div class="project-list" @onclick="() => { SelectedProject = null; }">
         <div class="project-list-header">
